-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
60a011acb (dev), 28aa5986e (6.8)
in src/main-lib/main.cpp, application manager stores the build dir path
// this might be needed later on by the native runtime to find a suitable qml runtime launcher setProperty("_am_build_dir", QString::fromLatin1(AM_BUILD_DIR));
This causes reproducible build QA issues.
Specifically, it causes problems in Yocto builds, as all build time temp paths are treated as errors.
ERROR: qtapplicationmanager-6.9.0-r0 do_package_qa: QA Issue: File /usr/bin/appman-qmltestrunner in package qtapplicationmanager-tools contains reference to TMPDIR [buildpaths] ERROR: qtapplicationmanager-6.9.0-r0 do_package_qa: QA Issue: File /usr/lib/libQt6AppManMain.a in package qtapplicationmanager-staticdev contains reference to TMPDIR [buildpaths] ERROR: qtapplicationmanager-6.9.0-r0 do_package_qa: QA Issue: File /usr/bin/appman in package qtapplicationmanager contains reference to TMPDIR [buildpaths] ERROR: qtapplicationmanager-6.9.0-r0 do_package_qa: Fatal QA errors were found, failing task.
- relates to
-
QTBUG-105926 Qt should support reproducible builds
-
- Open
-
For Gerrit Dashboard: QTBUG-130117 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
598422,8 | Do not compile the build directory into the appman binary | dev | qt/qtapplicationmanager | Status: MERGED | +2 | 0 |
600910,2 | Do not compile the build directory into the appman binary | 6.8 | qt/qtapplicationmanager | Status: MERGED | +2 | 0 |